reorganises folders and adds SplitButton example

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+  font-size: 14px;
 }
-
 
 img {
   max-width: 100%;
